--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,6 @@
-<h1>View to check all users</h1>
+<section class="users-container">
+    <header>
+        <h1>List of Users</h1>
+    </header>
+   <%=render partial: "partials/user", collection: @users%>
+</section>
