Solve the N+1 queries problem
Create test files for system views

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,6 +101,10 @@ a:hover {
   padding: 3rem;
 }
 
+.user-card:not(:first-child) {
+  margin-top: 1rem;
+}
+
 .user-bio {
   width: 100%;
   padding: 1rem;
