--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <section class="card post-container">
   <div class="post-header flex">
-    <h3 class="post-title">Post #<%= @post.id %> by <%= @post.author.name %></h3>
+    <h3 class="post-title"><%= @post.title %> by <%= @post.author.name %></h3>
     <p class="post-counters flex">
       <span class="text-muted">Comments: <%= @post.comments_counter %> </span>
       <span class="text-muted">Likes: <%= @post.likes_counter %></span>
