Fix linters errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class="container">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-      <div class="sign-btn">
+      <div class="sign-btn" style="margin-bottom: 1rem">
         <%= button_to "Sign out", destroy_user_session_path, method: :delete, data: {turbo: false}, class: "btn" if user_signed_in?%>
       </div>
       <%= yield %>
