--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
   <div class="post-header flex">
     <h3 class="post-title"><%= @post.title %> by <%= @post.author.name %></h3>
     <p class="post-counters flex">
-      <span class="text-muted">Comments: <%= @post.comments_counter %> </span>
-      <span class="text-muted">Likes: <%= @post.likes_counter %></span>
+      <span class="comments-counter">Comments: <%= @post.comments_counter %> </span>
+      <span class="likes-counter">Likes: <%= @post.likes_counter %></span>
     </p>
   </div>
   <div class="post-body">
