Fix linters errors

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,6 @@
   <%= render 'comments/comment'%>
 
   <% if can? :destroy, @post %>
-    <%= button_to "Delete post", user_post_path(@user.id, @post.id), method: :delete, data: { turbo: false }, class: 'btn delete-btn' %>
+    <%= button_to "Delete post", user_post_path(@post.author_id, @post.id), method: :delete, data: { turbo: false }, class: 'btn delete-btn' %>
   <% end %>
 </section>
