--- a/app/views/partials/_user.html.erb
+++ b/app/views/partials/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="card user-card flex">
   <div class="image-block">
-    <img src=<%=user.photo%> alt="user image" class="user-profile-img" />
+    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dXNlcnxlbnwwfHwwfHw%3D&w=1000&q=80" alt="user image" class="user-profile-img" />
   </div>
 
   <div class="details-block flex">
